cluster-test/test-raw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-demo-raw
  labels:
    app.kubernetes.io/name: rails-demo-raw
    app.kubernetes.io/instance: rails-demo-raw
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rails-demo-raw
      app.kubernetes.io/instance: rails-demo-raw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rails-demo-raw
        app.kubernetes.io/instance: rails-demo-raw
    spec:
      containers:
      - name: rails-demo
        image: ghcr.io/mikevader/rails-demo:v1.7
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
      - name: rails-demo-metrics
        image: ghcr.io/mikevader/rails-demo:v1.7
        command: ["bundle"]
        args: ["exec", "prometheus_exporter", "-b", "0.0.0.0"]
        ports:
        - name: metrics
          containerPort: 9394
          protocol: TCP
